--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,8 +1,13 @@
 .app-header {
     background-color:#333;
-    height: 100%;
+    height:70vh;
+    color: white;
 }
 
 .bg-light {
     background-color: transparent !important;
+}
+
+.home-link {
+    color: white;
 }
