--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,35 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size:14px;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+h1 {
+  font-size:150%;
+}
+
+h2 {
+  font-size:130%;
+}
+
+h3 {
+  font-size:110%;
+}
+
+h4 {
+  font-size:100%;
+}
+
+p {
+  font-size:100%;
+}
+
+section {
+
+}
+
