--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,15 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
+  
+
+    font-family: 'Quicksand', sans-serif;
+
+
+ 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size:14px;
+  font-size:16px;
 }
 
 code {
@@ -14,8 +20,22 @@ code {
     monospace;
 }
 
+.action {
+  background-color:#62bcfa;
+}
+
+button {
+  background-color:#62bcfa;
+}
+
+a {
+  font-weight:500;
+}
+
 h1 {
-  font-size:150%;
+  font-size:650%;
+  font-weight:400;
+
 }
 
 h2 {
