--- a/src/styles/login_signup.css
+++ b/src/styles/login_signup.css
@@ -1,19 +1,47 @@
 .left-side {
     background-color:#333;
     height: 100vh;
-}
-
-
-.right-side {
-
+    background-image: url('https://images.unsplash.com/photo-1501127122-f385ca6ddd9d?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=be441e75e87b2016751449c409ddc249&auto=format&fit=crop&w=675&q=80'); 
+    background-size: cover;
+    
 }
 
 .right-side {
     display: grid;
     place-content: center;
+    /* background-color:#fcfeff */
+}
+
+/* .form-box {
+    padding:60px 30px;
+    width: 100%;
+    background-color: white;
+    border:2px solid #3498db;
+    border-radius:4px;
+} */
+.login_signup {
+    height: 100vh;
+}
+
+.form-title {
+    font-size:200px;
     
 }
 
-.login_signup {
-    height: 100vh;
+.login_signup_title {
+    font-size:200%;
+    color:#3498db;
+    font-weight: 700;
+}
+
+/* .login_signup_desc {
+    text-align: center;
+} */
+
+.icon {
+    font-size:300%;
+    color:#3498db;
+}
+.form-group {
+    padding:2% 0%;
 }
