signup page design , design signup form

--- a/src/styles/login_signup.css
+++ b/src/styles/login_signup.css
@@ -28,6 +28,12 @@
     
 }
 
+.btn-primary {
+    background-color: #3498db !important;
+    font-size:120%;
+    border:0px;
+}
+
 .login_signup_title {
     font-size:200%;
     color:#3498db;
