--- a/src/styles/dashbord.css
+++ b/src/styles/dashbord.css
@@ -6,6 +6,13 @@
 
 }
 
+.white-box{
+    background-color:white;
+    min-height:200px;
+    border-radius:4px;
+    box-shadow:1px 1px 1px 1px rgba(0, 0, 0, 0.2);
+} 
+
 .nav-pills .nav-link.active, .nav-pills .show>.nav-link {
     background-color:#3498db;
     font-size:140%;
