--- a/src/styles/dashbord.css
+++ b/src/styles/dashbord.css
@@ -5,7 +5,13 @@
 #dashbord-sections-list {
 
 }
-
+.box {
+    width: 100%;
+    background-color: #f4f4f4;
+    border-radius:4px;
+    box-shadow: 0px 2px 2px rgba(0,0,0,0.1);
+    padding:2%;
+}
 .nav-pills .nav-link.active, .nav-pills .show>.nav-link {
     background-color:#3498db;
     font-size:140%;
