--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,13 +1,48 @@
 .app-header {
-    background-color:#333;
-    height:70vh;
-    color: white;
+    background-image: url('./../images/Untitled-2.jpg');
+    background-size:cover;
+    height:100vh;
+    color: #333;
 }
-
+#home .container {
+    min-width:1400px;
+}
+#team .container {
+    min-width:1100px;
+}
 .bg-light {
     background-color: transparent !important;
 }
 
 .home-link {
-    color: white;
+    color:#62bcfa;
 }
+section {
+    padding:3% 0%;
+    color:white;
+}
+#team {
+    
+    background-color: #5487b5;
+}
+
+#team h1{
+    font-weight:300;
+}
+
+#home-desc h1 {
+    font-size:600%;
+    font-weight:300;
+    opacity:0.8;
+}
+
+#home-desc p {
+    font-size:100%;
+    opacity: 0.5;
+}
+#team-image {
+    border-radius:4px;
+    box-shadow:30px 30px 0px rgba(255, 255, 255, 0.5); 
+}
+
+
