add navbar to dashbord

--- a/src/styles/dashbord.css
+++ b/src/styles/dashbord.css
@@ -1,5 +1,6 @@
 #dashbord {
     height: 100vh;
+    background-color: #f9f9f9;
 }
 
 #dashbord-sections-list {
@@ -25,15 +26,5 @@
     
 }
 
-.dash-link {
-    font-size:100%;
-    padding:8% 3%;
-    color: white;
-    margin:2%;
-    opacity:0.9;
-    font-weight:700;
-}
 
-.dash-link:hover {
-    background-color:#333;
-}
+
