--- a/src/index.css
+++ b/src/index.css
@@ -28,16 +28,28 @@ button {
   background-color:#62bcfa;
   border:0px;
   cursor: pointer;
-  font-size:120%;
+  font-size:100%;
   padding: 10px 20px;
   margin-right:10px;
   border-radius:200px;
   color:white;
   font-weight:600;
 }
+button:hover {
+  background-color: #f3f3f3;
+  color:#333;
+  transition:0.3;
+}
 
 a {
   font-weight:500;
+  text-decoration:none;
+  color: white;
+}
+a:hover {
+  cursor: pointer;
+  text-decoration:none;
+  color: #333;
 }
 
 h1 {
